# personal_docs

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitlint  .mdlrc  .mdlrc.style.rb  .opencommitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml
_static/styles/: extra.css  hello_algo.css
cheatsheet/ci_cd/: index.html
cheatsheet/data_science/: index.html
cheatsheet/docker/: index.html
cheatsheet/dot_net/: index.html
cheatsheet/elasticsearch/: index.html
cheatsheet/git/: index.html
cheatsheet/go/: index.html
cheatsheet/kubernetes/: index.html
cheatsheet/linux/: index.html
cheatsheet/mongodb/: index.html
cheatsheet/mysql/: index.html
cheatsheet/nginx/: index.html
cheatsheet/postgresql/: index.html
cheatsheet/python/: index.html
cheatsheet/rabbitmq/: index.html
cheatsheet/wordpress/: index.html
docs/: .pages  ci_cd.md  data_science.md  docker.md  dot_net.md  elasticsearch.md  git.md  go.md  index.md  java.md  kubernetes.md  linux.md  mongodb.md  mysql.md  nginx.md  oauth.md  postgresql.md  python.md  rabbitmq.md  software.md  wordpress.md
docs/ai/: .nav.yml  .pages  index.md
docs/applications/: .pages  kafka.md
docs/cheatsheet/: ai.md  ci_cd.md  data_science.md  docker.md  dot_net.md  elasticsearch.md  git.md  go.md  linux.md  mongodb.md  mysql.md  neo4j.md  nginx.md  postgresql.md  python.md  rabbitmq.md  wordpress.md
docs/cheatsheets/: go.md  kubernetes.md  linux.md  postgresql.md  python.md
docs/data_science/: .nav.yml  .pages  index.md
docs/mathematics/: index.md
docs/soft_skill/: atomic_habits_book.md  google_keys_to_successful_teams.md  great_managers_book.md  index.md  personality_types.md
docs/software/: .nav.yml  .pages  index.md
requirements/compiled/: dev.txt
requirements/prerequisite/: pip-tools.txt
requirements/raw/: base.in  dev.in
scripts/: build_mkdocs_config.py  detect_dangling_images.py  docx_to_md.py  img_optimizer.py  md_combiner.py  md_dangling_images.py  md_headlines_to_title.py  md_image_optimizer.py  md_lint.sh  md_rewrap_long_lines.py  md_toggle_tabs.py
scripts/dir_checker/: _dto.py  _empty_validator.py  dir_checker.py
scripts/file_checker/: _dto.py  _func_validator.py  _import_validator.py  _msg_validator.py  file_checker.py
scripts/utils/: argument_validators.py  markdown.py  timing.py
search/: search_index.json
soft_skill/google_keys_to_successful_teams/: index.html
soft_skill/great_managers_book/: index.html
source/: ai.md  architecture.md  ci_cd.md  conf.py  data_science.md  django.md  docker.md  dot_net.md  dotnet.md  elasticsearch.md  git.md  gitlab_ci.md  go.md  index.rst  java.md  jetbrains.md  kubernetes.md  links.md  linux.md  mongodb.md  mysql.md  nginx.md  oauth.md  postgresql.md  python.md  rabbitmq.md  react.md  software.md  windows.md  wordPress.md  wordpress.md
(+1567 files in other folders)
