# =========================
# Poetry
# =====
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
mdx_truly_sane_lists = "1.3"
mkdocs = "1.6.1"
mkdocs-awesome-pages-plugin = "2.9.3"
mkdocs-glightbox = "0.4.0"
mkdocs-material = "9.5.34"
mkdocs-minify-plugin = "0.8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"

# =========================
# Ruff
# =====
[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D104",  # undocumented-public-package
    "D100",  # undocumented-public-module
    "D101",  # undocumented-public-class
    "D106",  # undocumented-public-nested-class
    "D107",  # undocumented-public-init
    "D102",  # undocumented-public-method
    "D105",  # undocumented-magic-method
    "D103",  # undocumented-public-function
    "D203",  # one-blank-line-before-class (conflict with D211)
    "D213",  # multi-line-summary-second-line (conflict with D212)
    "ANN401",  # any-type
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "FIX002",  # line-contains-todo
    "TD003",  # missing-todo-link
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
    "TCH001",  # typing-only-first-party-import
    "T201",  # print
    "S603",  # subprocess-without-shell-equals-true
    "S311",  # suspicious-non-cryptographic-random-usage
    "PLR2004",  # magic-value-comparison
    "COM812",  # missing-trailing-comma (Suggested by ruff to disable)
    "ISC001",  # single-line-implicit-string-concatenation (Suggested by ruff to disable)
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.format]
skip-magic-trailing-comma = true

# =========================
# MyPy
# =====
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
implicit_reexport = false

# =========================
# Pylint
# =====
[tool.pylint.main]
py-version = "3.11"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
min-public-methods = 1

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "import-error",
    "duplicate-code",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-locals",
    "method-hidden",
    "fixme",  # Ruff will handle it
    "broad-exception-raised",  # Ruff will handle it
    "line-too-long",  # Ruff will handle it
    "unused-argument",  # Ruff will handle it
    "too-many-arguments",  # Ruff will handle it
    "too-many-branches",  # Ruff will handle it
    "too-many-statements",  # Ruff will handle it
    "bare-except",  # Ruff will handle it
]
